Render bestiary above modded screen blur