@@ -18,103 +18,51 @@ public final class BestiaryScreen extends Screen {
 
     private static final int ROW_HEIGHT = 23;
 
-    private static final int BACKGROUND =
-            0xF20B0E14;
-
-    private static final int PANEL =
-            0xF2181D29;
-
-    private static final int PANEL_SECONDARY =
-            0xF211151E;
-
-    private static final int ROW =
-            0xD9222937;
-
-    private static final int ROW_UNKNOWN =
-            0xD9191E28;
-
-    private static final int ROW_SELECTED =
-            0xFF38445C;
-
-    private static final int ACCENT =
-            0xFF8E79FF;
-
-    private static final int TEXT =
-            0xFFF2F3F7;
-
-    private static final int TEXT_SECONDARY =
-            0xFFA8AFBD;
-
-    private static final int SUCCESS =
-            0xFF79E08A;
-
-    private static final int UNKNOWN =
-            0xFF8B919E;
+    private static final int BACKGROUND = 0xF20B0E14;
+    private static final int PANEL = 0xF2181D29;
+    private static final int LEFT_PANEL = 0xF211151E;
+    private static final int ROW = 0xD9222937;
+    private static final int ROW_UNKNOWN = 0xD9191E28;
+    private static final int SELECTED = 0xFF38445C;
+    private static final int ACCENT = 0xFF8E79FF;
+    private static final int TEXT = 0xFFF2F3F7;
+    private static final int MUTED = 0xFFA8AFBD;
+    private static final int SUCCESS = 0xFF79E08A;
+    private static final int UNKNOWN = 0xFF8B919E;
 
     private final BestiaryPayload payload;
+    private final List<BestiaryPayload.Entry> allEntries;
 
-    private final List<BestiaryPayload.Entry>
-            allEntries;
-
-    private List<BestiaryPayload.Entry>
-            filteredEntries;
-
-    private EditBox searchBox;
-
+    private List<BestiaryPayload.Entry> filteredEntries;
     private BestiaryPayload.Entry selected;
-
-    private int firstVisibleRow = 0;
+    private EditBox searchBox;
+    private int firstVisibleRow;
 
     public BestiaryScreen(
             BestiaryPayload payload
     ) {
-        super(
-                Component.literal(
-                        "Бестиарий Randomizer"
-                )
-        );
-
+        super(Component.literal("Бестиарий Randomizer"));
         this.payload = payload;
-        this.allEntries =
-                List.copyOf(payload.entries());
-
-        this.filteredEntries =
-                this.allEntries;
+        this.allEntries = List.copyOf(payload.entries());
+        this.filteredEntries = this.allEntries;
     }
 
     @Override
     protected void init() {
-        int left =
-                windowLeft();
-
-        int searchWidth =
-                leftPanelWidth() - 24;
-
-        searchBox =
-                new EditBox(
-                        this.font,
-                        left + 12,
-                        windowTop() + 37,
-                        searchWidth,
-                        20,
-                        Component.literal(
-                                "Поиск"
-                        )
-                );
-
-        searchBox.setSuggestion(
-                "Поиск моба..."
+        searchBox = new EditBox(
+                font,
+                left() + 12,
+                top() + 36,
+                listWidth() - 24,
+                20,
+                Component.literal("Поиск моба")
         );
 
-        searchBox.setResponder(
-                this::applyFilter
-        );
+        searchBox.setSuggestion("Поиск моба...");
+        searchBox.setResponder(this::filter);
+        addRenderableWidget(searchBox);
 
-        this.addRenderableWidget(
-                searchBox
-        );
-
-        applyFilter("");
+        filter("");
     }
 
     @Override
@@ -124,295 +72,153 @@ public final class BestiaryScreen extends Screen {
             int mouseY,
             float partialTick
     ) {
+        /*
+         * Стандартный Screen render выполняется первым.
+         * Это не даёт ATM10/FancyMenu blur накрыть наш текст,
+         * список и детали. SearchBox повторно рисуется поверх GUI.
+         */
+        super.render(graphics, mouseX, mouseY, partialTick);
+
+        graphics.fill(0, 0, width, height, BACKGROUND);
+        graphics.fill(left(), top(), right(), bottom(), PANEL);
+        graphics.fill(left(), top(), left() + listWidth(), bottom(), LEFT_PANEL);
+        graphics.fill(left(), top(), right(), top() + 2, ACCENT);
         graphics.fill(
-                0,
-                0,
-                this.width,
-                this.height,
-                BACKGROUND
-        );
-
-        int left =
-                windowLeft();
-
-        int right =
-                windowRight();
-
-        int top =
-                windowTop();
-
-        int bottom =
-                windowBottom();
-
-        int divider =
-                left + leftPanelWidth();
-
-        graphics.fill(
-                left,
-                top,
-                right,
-                bottom,
-                PANEL
-        );
-
-        graphics.fill(
-                left,
-                top,
-                right,
-                top + 2,
-                ACCENT
-        );
-
-        graphics.fill(
-                left,
-                top,
-                divider,
-                bottom,
-                PANEL_SECONDARY
-        );
-
-        graphics.fill(
-                divider,
-                top,
-                divider + 1,
-                bottom,
+                left() + listWidth(),
+                top(),
+                left() + listWidth() + 1,
+                bottom(),
                 0xFF303747
         );
 
         graphics.drawCenteredString(
-                this.font,
-                Component.literal(
-                        "БЕСТИАРИЙ RANDOMIZER"
-                ),
-                (left + right) / 2,
-                top + 11,
+                font,
+                Component.literal("БЕСТИАРИЙ RANDOMIZER"),
+                (left() + right()) / 2,
+                top() + 11,
                 TEXT
         );
 
-        renderProgress(
-                graphics,
-                left,
-                right,
-                top
-        );
+        renderProgress(graphics);
+        renderList(graphics);
+        renderDetails(graphics);
+        renderScrollbar(graphics);
 
-        renderMobList(
-                graphics,
-                mouseX,
-                mouseY
-        );
-
-        renderDetails(
-                graphics
-        );
-
-        renderScrollbar(
-                graphics
-        );
-
-        super.render(
-                graphics,
-                mouseX,
-                mouseY,
-                partialTick
-        );
+        if (searchBox != null) {
+            searchBox.render(graphics, mouseX, mouseY, partialTick);
+        }
     }
 
     private void renderProgress(
-            GuiGraphics graphics,
-            int left,
-            int right,
-            int top
+            GuiGraphics graphics
     ) {
         int discovered = 0;
 
-        for (BestiaryPayload.Entry entry :
-                allEntries) {
-
+        for (BestiaryPayload.Entry entry : allEntries) {
             if (entry.discovered()) {
                 discovered++;
             }
         }
 
-        int total =
-                allEntries.size();
+        int x = left() + listWidth() + 20;
+        int y = top() + 38;
+        int barRight = right() - 20;
+        int barWidth = Math.max(1, barRight - x);
 
-        int barLeft =
-                left + leftPanelWidth() + 18;
+        graphics.drawString(
+                font,
+                Component.literal(
+                        "Открыто: " + discovered + " / " + allEntries.size()
+                ),
+                x,
+                y,
+                MUTED
+        );
 
-        int barRight =
-                right - 18;
-
-        int barY =
-                top + 38;
-
-        int barWidth =
-                Math.max(
-                        1,
-                        barRight - barLeft
-                );
-
-        float progress =
-                total == 0
-                        ? 0.0F
-                        : (float) discovered
-                        / (float) total;
+        y += 15;
 
         graphics.fill(
-                barLeft,
-                barY,
+                x,
+                y,
                 barRight,
-                barY + 5,
+                y + 5,
                 0xFF282E3A
         );
 
-        graphics.fill(
-                barLeft,
-                barY,
-                barLeft
-                        + Math.round(
-                                barWidth
-                                        * progress
-                        ),
-                barY + 5,
-                ACCENT
-        );
+        float progress = allEntries.isEmpty()
+                ? 0.0F
+                : (float) discovered / allEntries.size();
 
-        graphics.drawString(
-                this.font,
-                Component.literal(
-                        "Изучено: "
-                                + discovered
-                                + " / "
-                                + total
-                ),
-                barLeft,
-                barY + 9,
-                TEXT_SECONDARY
+        graphics.fill(
+                x,
+                y,
+                x + Math.round(barWidth * progress),
+                y + 5,
+                ACCENT
         );
     }
 
-    private void renderMobList(
-            GuiGraphics graphics,
-            int mouseX,
-            int mouseY
+    private void renderList(
+            GuiGraphics graphics
     ) {
-        int left =
-                windowLeft() + 8;
+        int visible = visibleRows();
+        int end = Math.min(
+                filteredEntries.size(),
+                firstVisibleRow + visible
+        );
 
-        int right =
-                windowLeft()
-                        + leftPanelWidth()
-                        - 8;
-
-        int top =
-                listTop();
-
-        int visible =
-                visibleRows();
-
-        int end =
-                Math.min(
-                        filteredEntries.size(),
-                        firstVisibleRow
-                                + visible
-                );
-
-        for (int index =
-                firstVisibleRow;
-             index < end;
-             index++) {
-
+        for (int index = firstVisibleRow; index < end; index++) {
             BestiaryPayload.Entry entry =
-                    filteredEntries.get(
-                            index
-                    );
+                    filteredEntries.get(index);
 
-            int visibleIndex =
-                    index - firstVisibleRow;
+            int y = listTop()
+                    + (index - firstVisibleRow) * ROW_HEIGHT;
 
-            int rowTop =
-                    top
-                            + visibleIndex
-                            * ROW_HEIGHT;
-
-            int rowBottom =
-                    rowTop
-                            + ROW_HEIGHT
-                            - 2;
-
-            int color;
-
-            if (entry == selected) {
-                color = ROW_SELECTED;
-            } else if (entry.discovered()) {
-                color = ROW;
-            } else {
-                color = ROW_UNKNOWN;
-            }
+            int rowColor = entry == selected
+                    ? SELECTED
+                    : entry.discovered()
+                    ? ROW
+                    : ROW_UNKNOWN;
 
             graphics.fill(
-                    left,
-                    rowTop,
-                    right,
-                    rowBottom,
-                    color
+                    left() + 8,
+                    y,
+                    left() + listWidth() - 8,
+                    y + ROW_HEIGHT - 2,
+                    rowColor
             );
 
-            String mobName =
-                    trimToWidth(
-                            entityName(
-                                    entry.sourceId()
-                            ),
-                            right
-                                    - left
-                                    - 66
-                    );
-
             graphics.drawString(
-                    this.font,
+                    font,
                     Component.literal(
-                            mobName
+                            entry.discovered() ? "●" : "○"
                     ),
-                    left + 7,
-                    rowTop + 7,
-                    TEXT
+                    left() + 13,
+                    y + 7,
+                    entry.discovered() ? SUCCESS : UNKNOWN
             );
 
-            String status =
-                    entry.discovered()
-                            ? "ОТКРЫТО"
-                            : "???";
-
-            int statusColor =
-                    entry.discovered()
-                            ? SUCCESS
-                            : UNKNOWN;
-
             graphics.drawString(
-                    this.font,
+                    font,
                     Component.literal(
-                            status
-                    ),
-                    right
-                            - this.font.width(
-                                    status
+                            trim(
+                                    entityName(entry.sourceId()),
+                                    listWidth() - 58
                             )
-                            - 6,
-                    rowTop + 7,
-                    statusColor
+                    ),
+                    left() + 29,
+                    y + 7,
+                    entry.discovered() ? TEXT : MUTED
             );
         }
 
         if (filteredEntries.isEmpty()) {
             graphics.drawCenteredString(
-                    this.font,
-                    Component.literal(
-                            "Ничего не найдено"
-                    ),
-                    (left + right) / 2,
-                    top + 20,
-                    TEXT_SECONDARY
+                    font,
+                    Component.literal("Ничего не найдено"),
+                    left() + listWidth() / 2,
+                    listTop() + 24,
+                    MUTED
             );
         }
     }
@@ -420,352 +226,185 @@ public final class BestiaryScreen extends Screen {
     private void renderDetails(
             GuiGraphics graphics
     ) {
-        int left =
-                windowLeft()
-                        + leftPanelWidth()
-                        + 20;
-
-        int right =
-                windowRight() - 20;
-
-        int top =
-                windowTop() + 72;
+        int x = left() + listWidth() + 20;
+        int y = top() + 82;
+        int availableWidth = right() - x - 18;
 
         if (selected == null) {
-            graphics.drawCenteredString(
-                    this.font,
-                    Component.literal(
-                            "Выберите существо слева"
-                    ),
-                    (left + right) / 2,
-                    top + 30,
-                    TEXT_SECONDARY
+            graphics.drawString(
+                    font,
+                    Component.literal("Выберите моба из списка."),
+                    x,
+                    y,
+                    MUTED
             );
-
             return;
         }
 
-        String sourceName =
-                entityName(
-                        selected.sourceId()
-                );
-
         graphics.drawString(
-                this.font,
+                font,
                 Component.literal(
-                        sourceName
-                ),
-                left,
-                top,
-                TEXT
-        );
-
-        graphics.fill(
-                left,
-                top + 16,
-                right,
-                top + 17,
-                0xFF303747
-        );
-
-        int y =
-                top + 30;
-
-        graphics.drawString(
-                this.font,
-                Component.literal(
-                        "Статус"
-                ),
-                left,
-                y,
-                TEXT_SECONDARY
-        );
-
-        graphics.drawString(
-                this.font,
-                Component.literal(
-                        selected.discovered()
-                                ? "ИЗУЧЕНО"
-                                : "НЕ ИЗУЧЕНО"
-                ),
-                left + 92,
-                y,
-                selected.discovered()
-                        ? SUCCESS
-                        : UNKNOWN
-        );
-
-        y += 24;
-
-        graphics.drawString(
-                this.font,
-                Component.literal(
-                        "Убийств игроком"
-                ),
-                left,
-                y,
-                TEXT_SECONDARY
-        );
-
-        graphics.drawString(
-                this.font,
-                Component.literal(
-                        Integer.toString(
-                                selected.kills()
+                        trim(
+                                entityName(selected.sourceId()),
+                                availableWidth
                         )
                 ),
-                left + 120,
+                x,
                 y,
                 TEXT
-        );
-
-        y += 34;
-
-        graphics.drawString(
-                this.font,
-                Component.literal(
-                        "Лут перенаправлен от:"
-                ),
-                left,
-                y,
-                TEXT_SECONDARY
         );
 
         y += 18;
 
-        String donorName;
+        graphics.drawString(
+                font,
+                Component.literal(
+                        selected.discovered()
+                                ? "Открыт"
+                                : "Не открыт"
+                ),
+                x,
+                y,
+                selected.discovered() ? SUCCESS : UNKNOWN
+        );
+
+        y += 20;
+
+        graphics.drawString(
+                font,
+                Component.literal(
+                        "Убийств игроком: " + selected.kills()
+                ),
+                x,
+                y,
+                MUTED
+        );
+
+        y += 30;
+
+        graphics.drawString(
+                font,
+                Component.literal("Источник лута"),
+                x,
+                y,
+                MUTED
+        );
+
+        y += 16;
 
         if (selected.discovered()
-                && !selected.targetId()
-                .isBlank()) {
-
-            donorName =
-                    entityName(
-                            selected.targetId()
-                    );
+                && !selected.targetId().isEmpty()) {
 
             graphics.drawString(
-                    this.font,
+                    font,
                     Component.literal(
-                            "→ " + donorName
+                            trim(
+                                    entityName(selected.targetId()),
+                                    availableWidth
+                            )
                     ),
-                    left,
+                    x,
                     y,
                     ACCENT
             );
 
+            y += 15;
+
+            graphics.drawString(
+                    font,
+                    Component.literal(
+                            trim(selected.targetId(), availableWidth)
+                    ),
+                    x,
+                    y,
+                    0xFF7F8795
+            );
         } else {
             graphics.drawString(
-                    this.font,
-                    Component.literal(
-                            "→ ???"
-                    ),
-                    left,
+                    font,
+                    Component.literal("???"),
+                    x,
                     y,
                     UNKNOWN
             );
         }
 
-        y += 38;
-
-        if (!selected.discovered()) {
-            graphics.drawString(
-                    this.font,
-                    Component.literal(
-                            "Убейте этого моба,"
-                    ),
-                    left,
-                    y,
-                    TEXT_SECONDARY
-            );
-
-            graphics.drawString(
-                    this.font,
-                    Component.literal(
-                            "чтобы раскрыть его лут."
-                    ),
-                    left,
-                    y + 12,
-                    TEXT_SECONDARY
-            );
-        }
-
-        int bottom =
-                windowBottom();
-
-        ResourceLocation sourceId =
-                ResourceLocation.tryParse(
-                        selected.sourceId()
-                );
-
-        String namespace =
-                sourceId == null
-                        ? "unknown"
-                        : sourceId.getNamespace();
+        y += 32;
 
         graphics.drawString(
-                this.font,
-                Component.literal(
-                        "Мод: " + namespace
-                ),
-                left,
-                bottom - 48,
-                0xFF717887
-        );
-
-        graphics.drawString(
-                this.font,
-                Component.literal(
-                        "ID: "
-                                + selected.sourceId()
-                ),
-                left,
-                bottom - 34,
-                0xFF5B6270
-        );
-
-        graphics.drawString(
-                this.font,
-                Component.literal(
-                        "Randomizer Seed: "
-                                + payload.masterSeed()
-                ),
-                left,
-                bottom - 20,
-                0xFF5B6270
-        );
-    }
-
-    private void renderScrollbar(
-            GuiGraphics graphics
-    ) {
-        int visible =
-                visibleRows();
-
-        if (filteredEntries.size()
-                <= visible) {
-            return;
-        }
-
-        int trackTop =
-                listTop();
-
-        int trackBottom =
-                windowBottom() - 10;
-
-        int trackHeight =
-                trackBottom - trackTop;
-
-        int x =
-                windowLeft()
-                        + leftPanelWidth()
-                        - 5;
-
-        graphics.fill(
+                font,
+                Component.literal("Entity ID:"),
                 x,
-                trackTop,
-                x + 2,
-                trackBottom,
-                0xFF303747
+                y,
+                MUTED
         );
 
-        int thumbHeight =
-                Math.max(
-                        16,
-                        Math.round(
-                                trackHeight
-                                        * (
-                                        (float) visible
-                                                / filteredEntries.size()
-                                )
-                        )
-                );
+        y += 13;
 
-        int maxScroll =
-                filteredEntries.size()
-                        - visible;
+        graphics.drawString(
+                font,
+                Component.literal(
+                        trim(selected.sourceId(), availableWidth)
+                ),
+                x,
+                y,
+                0xFF7F8795
+        );
 
-        float scrollProgress =
-                maxScroll <= 0
-                        ? 0.0F
-                        : (float) firstVisibleRow
-                        / maxScroll;
-
-        int thumbY =
-                trackTop
-                        + Math.round(
-                        (
-                                trackHeight
-                                        - thumbHeight
-                        )
-                                * scrollProgress
-                );
-
-        graphics.fill(
-                x - 1,
-                thumbY,
-                x + 3,
-                thumbY + thumbHeight,
-                ACCENT
+        graphics.drawString(
+                font,
+                Component.literal(
+                        "Randomizer Seed: " + payload.masterSeed()
+                ),
+                x,
+                bottom() - 22,
+                0xFF606877
         );
     }
 
-    private void applyFilter(
-            String search
+    private void filter(
+            String rawQuery
     ) {
-        String query =
-                search
-                        .trim()
-                        .toLowerCase(
-                                Locale.ROOT
-                        );
+        String query = rawQuery
+                .strip()
+                .toLowerCase(Locale.ROOT);
 
-        filteredEntries =
-                allEntries.stream()
-                        .filter(entry -> {
-                            String name =
-                                    entityName(
-                                            entry.sourceId()
-                                    )
-                                            .toLowerCase(
-                                                    Locale.ROOT
-                                            );
+        filteredEntries = allEntries.stream()
+                .filter(entry -> {
+                    String sourceName = entityName(entry.sourceId())
+                            .toLowerCase(Locale.ROOT);
 
-                            String id =
-                                    entry.sourceId()
-                                            .toLowerCase(
-                                                    Locale.ROOT
-                                            );
+                    String targetName = entry.discovered()
+                            && !entry.targetId().isEmpty()
+                            ? entityName(entry.targetId())
+                            .toLowerCase(Locale.ROOT)
+                            : "";
 
-                            return query.isEmpty()
-                                    || name.contains(
-                                    query
-                            )
-                                    || id.contains(
-                                    query
-                            );
-                        })
-                        .sorted(
-                                Comparator.comparing(
-                                        entry ->
-                                                entityName(
-                                                        entry.sourceId()
-                                                ),
-                                        String.CASE_INSENSITIVE_ORDER
-                                )
+                    return query.isEmpty()
+                            || sourceName.contains(query)
+                            || targetName.contains(query)
+                            || entry.sourceId()
+                            .toLowerCase(Locale.ROOT)
+                            .contains(query)
+                            || entry.targetId()
+                            .toLowerCase(Locale.ROOT)
+                            .contains(query);
+                })
+                .sorted(
+                        Comparator.comparing(
+                                entry -> entityName(entry.sourceId()),
+                                String.CASE_INSENSITIVE_ORDER
                         )
-                        .toList();
+                )
+                .toList();
 
         firstVisibleRow = 0;
 
         if (selected == null
-                || !filteredEntries
-                .contains(selected)) {
-
-            selected =
-                    filteredEntries.isEmpty()
-                            ? null
-                            : filteredEntries.get(0);
+                || !filteredEntries.contains(selected)) {
+            selected = filteredEntries.isEmpty()
+                    ? null
+                    : filteredEntries.getFirst();
         }
     }
 
@@ -775,43 +414,19 @@ public final class BestiaryScreen extends Screen {
             double mouseY,
             int button
     ) {
-        if (super.mouseClicked(
-                mouseX,
-                mouseY,
-                button
-        )) {
+        if (super.mouseClicked(mouseX, mouseY, button)) {
             return true;
         }
 
-        if (button != 0
-                || !isInsideList(
-                mouseX,
-                mouseY
-        )) {
+        if (button != 0 || !insideList(mouseX, mouseY)) {
             return false;
         }
 
-        int relativeY =
-                (int) mouseY
-                        - listTop();
+        int row = ((int) mouseY - listTop()) / ROW_HEIGHT;
+        int index = firstVisibleRow + row;
 
-        int row =
-                relativeY
-                        / ROW_HEIGHT;
-
-        int index =
-                firstVisibleRow
-                        + row;
-
-        if (index >= 0
-                && index
-                < filteredEntries.size()) {
-
-            selected =
-                    filteredEntries.get(
-                            index
-                    );
-
+        if (index >= 0 && index < filteredEntries.size()) {
+            selected = filteredEntries.get(index);
             return true;
         }
 
@@ -825,10 +440,7 @@ public final class BestiaryScreen extends Screen {
             double scrollX,
             double scrollY
     ) {
-        if (!isInsideList(
-                mouseX,
-                mouseY
-        )) {
+        if (!insideList(mouseX, mouseY)) {
             return super.mouseScrolled(
                     mouseX,
                     mouseY,
@@ -837,160 +449,157 @@ public final class BestiaryScreen extends Screen {
             );
         }
 
-        int maximum =
-                Math.max(
-                        0,
-                        filteredEntries.size()
-                                - visibleRows()
-                );
+        int maximum = Math.max(
+                0,
+                filteredEntries.size() - visibleRows()
+        );
 
-        if (scrollY > 0.0D) {
-            firstVisibleRow =
-                    Math.max(
-                            0,
-                            firstVisibleRow - 1
-                    );
-
-        } else if (scrollY < 0.0D) {
-            firstVisibleRow =
-                    Math.min(
-                            maximum,
-                            firstVisibleRow + 1
-                    );
+        if (scrollY > 0) {
+            firstVisibleRow = Math.max(
+                    0,
+                    firstVisibleRow - 1
+            );
+        } else if (scrollY < 0) {
+            firstVisibleRow = Math.min(
+                    maximum,
+                    firstVisibleRow + 1
+            );
         }
 
         return true;
     }
 
-    private boolean isInsideList(
+    private void renderScrollbar(
+            GuiGraphics graphics
+    ) {
+        int visible = visibleRows();
+
+        if (filteredEntries.size() <= visible) {
+            return;
+        }
+
+        int trackTop = listTop();
+        int trackBottom = bottom() - 10;
+        int trackHeight = trackBottom - trackTop;
+        int x = left() + listWidth() - 5;
+
+        graphics.fill(
+                x,
+                trackTop,
+                x + 2,
+                trackBottom,
+                0xFF303747
+        );
+
+        int thumbHeight = Math.max(
+                16,
+                Math.round(
+                        trackHeight
+                                * ((float) visible
+                                / filteredEntries.size())
+                )
+        );
+
+        int maxScroll = filteredEntries.size() - visible;
+        float position = maxScroll <= 0
+                ? 0.0F
+                : (float) firstVisibleRow / maxScroll;
+
+        int thumbY = trackTop
+                + Math.round(
+                        (trackHeight - thumbHeight)
+                                * position
+                );
+
+        graphics.fill(
+                x - 1,
+                thumbY,
+                x + 3,
+                thumbY + thumbHeight,
+                ACCENT
+        );
+    }
+
+    private boolean insideList(
             double mouseX,
             double mouseY
     ) {
-        return mouseX
-                >= windowLeft() + 8
-
-                && mouseX
-                <= windowLeft()
-                + leftPanelWidth()
-                - 8
-
-                && mouseY
-                >= listTop()
-
-                && mouseY
-                <= windowBottom()
-                - 10;
+        return mouseX >= left() + 8
+                && mouseX <= left() + listWidth() - 8
+                && mouseY >= listTop()
+                && mouseY <= bottom() - 10;
     }
 
     private int visibleRows() {
         return Math.max(
                 1,
-                (
-                        windowBottom()
-                                - 10
-                                - listTop()
-                )
-                        / ROW_HEIGHT
+                (bottom() - 10 - listTop()) / ROW_HEIGHT
         );
-    }
-
-    private int windowWidth() {
-        return Math.max(
-                300,
-                Math.min(
-                        820,
-                        this.width - 24
-                )
-        );
-    }
-
-    private int windowLeft() {
-        return (
-                this.width
-                        - windowWidth()
-        ) / 2;
-    }
-
-    private int windowRight() {
-        return windowLeft()
-                + windowWidth();
-    }
-
-    private int windowTop() {
-        return 16;
-    }
-
-    private int windowBottom() {
-        return this.height - 16;
-    }
-
-    private int leftPanelWidth() {
-        return Math.min(
-                280,
-                Math.max(
-                        190,
-                        windowWidth() / 3
-                )
-        );
-    }
-
-    private int listTop() {
-        return windowTop() + 67;
     }
 
     private String entityName(
             String rawId
     ) {
-        ResourceLocation id =
-                ResourceLocation.tryParse(
-                        rawId
-                );
+        ResourceLocation id = ResourceLocation.tryParse(rawId);
 
         if (id == null) {
             return rawId;
         }
 
-        EntityType<?> type =
-                BuiltInRegistries.ENTITY_TYPE
-                        .get(id);
+        EntityType<?> type = BuiltInRegistries.ENTITY_TYPE.get(id);
 
         if (type == null) {
             return rawId;
         }
 
-        return type
-                .getDescription()
-                .getString();
+        return type.getDescription().getString();
     }
 
-    private String trimToWidth(
-            String text,
+    private String trim(
+            String value,
             int maximumWidth
     ) {
-        if (this.font.width(text)
-                <= maximumWidth) {
-            return text;
+        if (maximumWidth <= 0 || font.width(value) <= maximumWidth) {
+            return value;
         }
 
-        String value = text;
+        String suffix = "...";
+        int suffixWidth = font.width(suffix);
+        int allowed = Math.max(0, maximumWidth - suffixWidth);
+        String trimmed = font.plainSubstrByWidth(value, allowed);
 
-        while (value.length() > 1
-                && this.font.width(
-                value + "…"
-        ) > maximumWidth) {
-
-            value =
-                    value.substring(
-                            0,
-                            value.length() - 1
-                    );
-        }
-
-        return value + "…";
+        return trimmed + suffix;
     }
 
-    @Override
-    public boolean isPauseScreen() {
-        return false;
+    private int windowWidth() {
+        return Math.max(360, Math.min(width - 24, 900));
+    }
+
+    private int windowHeight() {
+        return Math.max(260, Math.min(height - 24, 520));
+    }
+
+    private int left() {
+        return (width - windowWidth()) / 2;
+    }
+
+    private int right() {
+        return left() + windowWidth();
+    }
+
+    private int top() {
+        return (height - windowHeight()) / 2;
+    }
+
+    private int bottom() {
+        return top() + windowHeight();
+    }
+
+    private int listWidth() {
+        return Math.max(180, Math.min(330, windowWidth() * 2 / 5));
+    }
+
+    private int listTop() {
+        return top() + 66;
     }
 }
